--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@400;500;600;700;800&family=Sora:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Fraunces:wght@400;500;600;700;800&family=Sora:wght@300;400;500;600;700&display=swap");
 
 @font-face {
   font-family: "Tomboy";
